tests/ui/type-qpath-eof2.stderr
error: no rules expected the token `T`
 --> $DIR/type-qpath-eof2.rs:6:17
  |
6 |     input = [{ <T }]
  |                 ^

error: aborting due to previous error

